budget-grammar.txt
Lines ::= Command | Command Lines | Comment Lines
Command ::= New | Withdraw | Deposit
New ::= 'add' Account '>' Account Inflow ('with' Amount ('max' Amount)?)?
Withdraw ::= '-' Amount 'from' Account 'on' Date
Deposit ::= '+' Amount ('to' Account?) 'on' Date
Date ::= \d\d'/'\d\d'/'\d\d\d\d
Amount ::= \d+(.\d+)?
Account ::= [A-Za-z]+
Inflow ::= Amount ('flex' | 'fixed')
Comment ::= #.*\n
